# AiSelectAuto

./: .gitignore  CMakeLists.txt  Info.plist  bot.py  test.py  test_model.py
src/ai/: detector.cpp  detector.h
src/ai/config/: detector_model_config.cpp  detector_model_config.h
src/ai/engine/: inference_engine.cpp  inference_engine.h
src/ai/pipeline/: post_processor.cpp  post_processor.h  preprocessor.cpp  preprocessor.h
src/ai/runner/: ai_model_runner.cpp  ai_model_runner.h
src/ai/services/: ai_service.cpp  ai_service.h
src/ai/types/: detection.h  frame.cpp  frame.h  inference_result.h
src/ai/utils/: nms.cpp  nms.h
src/app/: main.cpp
src/ui/screens/: camera_screen.cpp  camera_screen.h  result_screen.cpp  result_screen.h
